# kdevelop-pg-qt

./: .gitignore  .kateconfig  .kde-ci.yml  .reviewboardrc  AUTHORS  CMakeLists.txt  COPYING.LIB  CTestConfig.cmake  KDevelop-PG-QtConfig.cmake.in  KDevelop-PG-QtMacros.cmake  Makefile.am  PACKAGING  README  TODO  configure.in  mkunionstruct.cpp
cmake/modules/: CMakeLists.txt  FindKDevelop-PG-Qt.cmake  FindKDevelop-PG.cmake  KDevelop-PG-QtConfig.cmake  KDevelop-PG-QtConfigVersion.cmake
examples/: CMakeLists.txt  Makefile.am
examples/cc/: CMakeLists.txt  FlexLexer.h  cc.g  cc.ll  ccast.h  ccdefaultvisitor.cpp  ccdefaultvisitor.h  cclexer.cpp  ccparser.cpp  ccparser.h  ccvisitor.cpp  ccvisitor.h  dumptree.cpp  dumptree.h  lexer.h  main.cpp
examples/cc/tests/: foobar.c  stdlib.h
examples/cool/: CMakeLists.txt  Makefile.am  arbitraryhighlighttest.cpp  cool-lexer.ll  cool.cpp  cool.g  cool.h  cool_io.cpp  cool_lexer.cpp  cool_lexer.h  cool_lexer.ll  cool_parser.cpp  cool_parser.h  decoder.h  main.cpp
examples/cool/tests/: t001.cl
examples/cpp/: cpp_codemodel.cm
examples/csharp/: CMakeLists.txt  Makefile.am  csharp-lexer.ll  csharp.cpp  csharp.g  csharp.h  csharp_ast.h  csharp_codemodel.cpp  csharp_codemodel.h  csharp_io.cpp  csharp_lexer.cc  csharp_lexer.cpp  csharp_lexer.h  csharp_lexer.ll  csharp_lookahead.cpp  csharp_lookahead.h  csharp_pp.cpp  csharp_pp.g  csharp_pp.h  csharp_pp_handler_visitor.cpp  csharp_pp_handler_visitor.h  csharp_pp_scope.cpp  csharp_pp_scope.h  decoder.h  main.cpp  main_serialize.cpp
examples/fact/: CMakeLists.txt  Makefile.am  debugvisitor.cpp  debugvisitor.h  decoder.h  fact.cpp  fact.g  fact.h  fact_io.cpp  fact_lexer.h  fact_lexer.ll  fact_parser.cpp  fact_parser.h  factast.h  factdefaultvisitor.cpp  factdefaultvisitor.h  factlexer.cpp  factlexer.h  factparser.cpp  factparser.h  factvisitor.cpp  factvisitor.h  main.cpp
examples/foolisp/: CMakeLists.txt  foolisp.g  foolisptest.cpp
examples/java/: CMakeLists.txt  Makefile.am  decoder.h  java-lexer.ll  java.cpp  java.g  java.h  java_ast.h  java_io.cpp  java_lexer.cc  java_lexer.cpp  java_lexer.ll  java_lookahead.cpp  java_lookahead.h  main.cpp  main_serialize.cpp
examples/java/tests/: literals.java
examples/php/: CMakeLists.txt  php.g  phptest.cpp
include/: CMakeLists.txt  kdev-pg-allocator.h  kdev-pg-char-sets.h  kdev-pg-list.h  kdev-pg-location-table.h  kdev-pg-memory-pool.h  kdev-pg-token-stream.h
kdev-cmg/: CMakeLists.txt  kdev-cmg-beautifier.cpp  kdev-cmg-chameleon-gen.cpp  kdev-cmg-declarations-gen.cpp  kdev-cmg-declarations-gen.h  kdev-cmg-decoder.h  kdev-cmg-forward-declarations-gen.cpp  kdev-cmg-forward-declarations-gen.h  kdev-cmg-generate.cpp  kdev-cmg-generate.h  kdev-cmg-implementation-gen.cpp  kdev-cmg-implementation-gen.h  kdev-cmg-initialize-ast.h  kdev-cmg-lexer.ll  kdev-cmg-parser.g  kdev-cmg.h
kdev-pg/: ASBeautifier.cpp  ASEnhancer.cpp  ASFormatter.cpp  CMakeLists.txt  astyle.h  generate-get-utf8-tuples.rb  generated-kdev-utf8-tuples.h  kdev-pg-ast-gen.cpp  kdev-pg-ast-gen.h  kdev-pg-ast.h  kdev-pg-beautifier.cpp  kdev-pg-beautifier.h  kdev-pg-bit-array.h  kdev-pg-bnf-visitor.cpp  kdev-pg-bnf-visitor.h  kdev-pg-char-sets.h  kdev-pg-charsets.h  kdev-pg-checker.cpp  kdev-pg-checker.h  kdev-pg-clone-tree.cpp  kdev-pg-clone-tree.h  kdev-pg-code-gen.cpp  kdev-pg-code-gen.h  kdev-pg-debug-visitor-gen.cpp  kdev-pg-debug-visitor-gen.h  kdev-pg-default-visitor-bits-gen.cpp  kdev-pg-default-visitor-bits-gen.h  kdev-pg-default-visitor-gen.cpp  kdev-pg-default-visitor-gen.h  kdev-pg-default-visitor.cpp  kdev-pg-default-visitor.h  kdev-pg-environment.h  kdev-pg-first.cpp  kdev-pg-first.h  kdev-pg-follow.cpp  kdev-pg-follow.h  kdev-pg-generate.cpp  kdev-pg-generate.h  kdev-pg-global.cpp  kdev-pg-inline-checker.cpp  (+33 more)
kdev-pg/test/: Op2main.cpp  Op2tokenstream.h  Opmain.cpp  case2.g  case3.g  case4.g  case5.g  case7.g  expected1  expected2  expected3  expected4  expected5  expected6  expected7  expected9  op.g  op2.g  test.sh  utf-iterator-test.cpp
src/: CMakeLists.txt  KDevelop-PG-QtConfig.cmake.in  KDevelop-PG-QtMacros.cmake  KDevelopPGQtConfig.cmake.in  KDevelopPGQtMacros.cmake  Makefile.am  kdev-pg-ast-gen.cpp  kdev-pg-ast-gen.h  kdev-pg-ast.h  kdev-pg-beautifier.cpp  kdev-pg-beautifier.h  kdev-pg-bit-array.h  kdev-pg-bnf-visitor.cpp  kdev-pg-checker.cpp  kdev-pg-checker.h  kdev-pg-clone-tree.cpp  kdev-pg-clone-tree.h  kdev-pg-code-gen.cpp  kdev-pg-code-gen.h  kdev-pg-debug-visitor-gen.cpp  kdev-pg-default-visitor-bits-gen.cpp  kdev-pg-default-visitor-bits-gen.h  kdev-pg-default-visitor-gen.cpp  kdev-pg-default-visitor-gen.h  kdev-pg-default-visitor.cpp  kdev-pg-default-visitor.h  kdev-pg-environment.h  kdev-pg-first.cpp  kdev-pg-first.h  kdev-pg-follow.cpp  kdev-pg-follow.h  kdev-pg-generate.cpp  kdev-pg-generate.h  kdev-pg-global.cpp  kdev-pg-lexer.ll  kdev-pg-main.cpp  kdev-pg-new-visitor-bits-gen.cpp  kdev-pg-new-visitor-gen.cpp  kdev-pg-parser.yy  kdev-pg-pretty-printer.cpp  (+20 more)
src/include/: kdev-pg-list.h  kdev-pg-token-stream.h
src/test/: Op2test  Opmain.cpp  case1.g  case6.g  case7.g  case8.g  expected2  expected7  expected8
tests/: CMakeLists.txt  benchmarks.cpp  benchmarks.h  testlocationtable.cpp  testlocationtable.h  testmemorypool.cpp  testmemorypool.h
unidata/: summary.txt
